service-platform-toolkit/utils/kube-config/services/logging/es-kibana/old/kibana-ingress-path.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress-path
  namespace: kube-system
  annotations:
    nginx.org/server-snippet: "proxy_ssl_verify off;"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: local.service.platform
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
        path: /kibana
